new article and projects added. added new block of DGUs.

--- a/education.html
+++ b/education.html
@@ -110,9 +110,19 @@ js: "/js/education.js"
             <h5 class="text-center">Achievements that received in the period of study.</h5>
             <div class="popup-gallery">
             </div>
+            <h3 class="section-title text-center" style="padding: 0;">Software copyrights</h3>
+            <h5 class="text-center">Copyrights for machine-readable software.</h5>
+            <div class="popup-gallery">
+            </div>
             <h3 class="section-title text-center" style="padding: 0;">Science articles</h3>
             <h5 class="text-center">Science articles that published in the period of study.</h5>
             <div class="row">
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/ijatcse260952020.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/ijatcse.jpg" alt="Modeling the Process of Filtration of Fluid and Protection of Groundwater from Ionic Pollutants" title="Modeling the Process of Filtration of Fluid and Protection of Groundwater from Ionic Pollutants">
+                        <p class="certificate-text">Modeling the Process of Filtration of Fluid and Protection of Groundwater from Ionic Pollutants</p>
+                    </a>
+                </div>
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/vozmojnosti_texnologii_dopolnennoy_realnosti.pdf" target="_blank">
                         <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/vozmojnosti_texnologii_dopolnennoy_realnosti.jpg" alt="Возможности технологии дополненной реальности в развитии ностальгического туризма" title="Возможности технологии дополненной реальности в развитии ностальгического туризма">
@@ -131,6 +141,8 @@ js: "/js/education.js"
                         <p class="certificate-text">Qidiruv tizimlarida bibliografik evrestikaning ahamiyati (page 108)</p>
                     </a>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/umnaya_biblioteka_kak_innovatsionniy.pdf" target="_blank">
                         <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/umnaya_biblioteka_kak_innovatsionniy.jpg" alt="Almeros.uz - электронная библиотека исторического и культурного наследия узбекистана" title="Almeros.uz - электронная библиотека исторического и культурного наследия узбекистана">
@@ -155,6 +167,8 @@ js: "/js/education.js"
                         <p class="certificate-text">Теоритическое основы построения и функционирования систем управление инцидентами информационной безопасности</p>
                     </a>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/harbiy_aloqa_tizimida_AKT.pdf" target="_blank">
                         <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/harbiy_aloqa_tizimida_AKT.jpg" alt="Архитектура централизованный базы данных инцидентов на основе рабочих процессов" title="Архитектура централизованный базы данных инцидентов на основе рабочих процессов">
@@ -179,6 +193,8 @@ js: "/js/education.js"
                         <p class="certificate-text">Ташкилотларда ахборот хавфсизлигига бўладиган хавф-хатар баҳолаш усули ҳақида  (page 35)</p>
                     </a>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/uch21vek_3_3_2016.pdf" target="_blank">
                         <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/uch21vek.jpg" alt="Аналитические и логические стили мышления в изучении технологий программирования в вузах" title="Аналитические и логические стили мышления в изучении технологий программирования в вузах">
@@ -203,6 +219,8 @@ js: "/js/education.js"
                         <p class="certificate-text">Comparing neural network models for time series prediction (page 231)</p>
                     </a>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/yosh_olimlar_konferensiyasi_2016_2_qism.pdf" target="_blank">
                         <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/yosh_olimlar_konferensiyasi_2016_2_qism.jpg" alt="Талабаларга маълумотларни интеллектуал тахлили фанини ўқитишда “Data mining tools” ластурий тахминотларининг ўрни" title="Талабаларга маълумотларни интеллектуал тахлили фанини ўқитишда “Data mining tools” ластурий тахминотларининг ўрни">
@@ -227,6 +245,8 @@ js: "/js/education.js"
                         <p class="certificate-text">Ta'lim sohasida kompyuter o'quv o'yinlarining qo'llanilishi (page 582)</p>
                     </a>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/tendensii_i_perspektivy_razvitiya_nauki.pdf" target="_blank">
                         <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/tendensii_i_perspektivy_razvitiya_nauki.jpg" alt="Капитал маблағларни корхоналараро оптимал тақсимлашни динамик усул дастурини яратиш" title="Капитал маблағларни корхоналараро оптимал тақсимлашни динамик усул дастурини яратиш">
