--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,28 @@ js: "/js/portfolio.js"
             <div class="row">
                 <div id="portfolio-grid" class="portfolio-grid portfolio-hover-w">
                     <div class="grid-sizer"></div>
+                    <div class="portfolio-item tall web">
+                        <a class="popup-link" href="/portfolio/asaxiy-web.jpg" title="Asaxiy.uz">
+                            <img  src="/img/loader.svg" data-src="/portfolio/asaxiy-web.jpg" alt="">
+                            <div class="portfolio-caption ">
+                                <h3 class="portfolio-title">Asaxiy.uz</h3>
+                                <div class="portfolio-descr">
+                                    Asaxiy - online shopping
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolio-item web">
+                        <a class="popup-link" href="/portfolio/chakana-web.jpg" title="MarketPlace Chakana.uz">
+                            <img  src="/img/loader.svg" data-src="/portfolio/chakana-web.jpg" alt="">
+                            <div class="portfolio-caption">
+                                <h3 class="portfolio-title">MarketPlace Chakana.uz</h3>
+                                <div class="portfolio-descr">
+                                    Chakana.uz - marketplace of Agrobank
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                     <div class="portfolio-item tall mobile">
                         <a class="popup-link" href="/portfolio/moy_koshelek.png" title="Мой кошелек">
                             <img  src="/img/loader.svg" data-src="/portfolio/moy_koshelek.png" alt="">
@@ -58,12 +80,34 @@ js: "/js/portfolio.js"
                         </a>
                     </div>
                     <div class="portfolio-item mobile">
+                        <a class="popup-link" href="/portfolio/chakana-android.jpg" title="MarketPlace chakana.uz">
+                            <img  src="/img/loader.svg" data-src="/portfolio/chakana-android.jpg" alt="">
+                            <div class="portfolio-caption ">
+                                <h3 class="portfolio-title">MarketPlace chakana.uz</h3>
+                                <div class="portfolio-descr">
+                                    Android app Chakana.uz - an app for shopping by MarketPlace Chakana.uz
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolio-item mobile">
                         <a class="popup-link" href="/portfolio/ya_calendar.png" title="Yandex calendar">
                             <img  src="/img/loader.svg" data-src="/portfolio/ya_calendar.png" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Yandex calendar</h3>
                                 <div class="portfolio-descr">
                                     Project of Yandex mobile school
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolio-item wide mobile">
+                        <a class="popup-link" href="/portfolio/asaxiy-books.jpg" title="Asaxiy books">
+                            <img  src="/img/loader.svg" data-src="/portfolio/asaxiy-books.jpg" alt="">
+                            <div class="portfolio-caption ">
+                                <h3 class="portfolio-title">Asaxiy books</h3>
+                                <div class="portfolio-descr">
+                                    Asaxiy books - e-book library
                                 </div>
                             </div>
                         </a>
@@ -90,6 +134,17 @@ js: "/js/portfolio.js"
                             </div>
                         </a>
                     </div>
+                    <div class="portfolio-item wide mobile">
+                        <a class="popup-link" href="/portfolio/chakana-ios.png" title="MarketPlace Chakana.uz">
+                            <img  src="/img/loader.svg" data-src="/portfolio/chakana-ios.png" alt="">
+                            <div class="portfolio-caption ">
+                                <h3 class="portfolio-title">MarketPlace Chakana.uz</h3>
+                                <div class="portfolio-descr">
+                                    iOS app Chakana.uz - an app for shopping by MarketPlace Chakana.uz
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                     <div class="portfolio-item wide-tall web">
                         <a class="popup-link" href="/portfolio/afex_old.png" title="Afex - online store (web, old)">
                             <img  src="/img/loader.svg" data-src="/portfolio/afex_old.png" alt="">
@@ -112,6 +167,17 @@ js: "/js/portfolio.js"
                             </div>
                         </a>
                     </div>
+                    <div class="portfolio-item mobile">
+                        <a class="popup-link" href="/portfolio/asaxiy-shop-mobile.jpg" title="Asaxiy Market - online store">
+                            <img  src="/img/loader.svg" data-src="/portfolio/asaxiy-shop-mobile.jpg" alt="">
+                            <div class="portfolio-caption ">
+                                <h3 class="portfolio-title">Asaxiy Market - online store</h3>
+                                <div class="portfolio-descr">
+                                    Android&iOS version of online store
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                     <div class="portfolio-item web mobile">
                         <a class="popup-link" href="/portfolio/afex_new_mobile.png" title="Afex - online store (web mobile, latest)">
                             <img  src="/img/loader.svg" data-src="/portfolio/afex_new_mobile.png" alt="">
@@ -119,6 +185,17 @@ js: "/js/portfolio.js"
                                 <h3 class="portfolio-title">Afex - online store</h3>
                                 <div class="portfolio-descr">
                                     New version of web mobile app
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolio-item web mobile">
+                        <a class="popup-link" href="/portfolio/bazarchik-mobile.jpg" title="Bazarchik.uz - online store">
+                            <img  src="/img/loader.svg" data-src="/portfolio/bazarchik-mobile.jpg" alt="">
+                            <div class="portfolio-caption ">
+                                <h3 class="portfolio-title">Bazarchik.uz - online store</h3>
+                                <div class="portfolio-descr">
+                                    Android&iOS version of Bazarchik.uz online shopping
                                 </div>
                             </div>
                         </a>
@@ -156,6 +233,17 @@ js: "/js/portfolio.js"
                             </div>
                         </a>
                     </div>
+                    <div class="portfolio-item wide app">
+                        <a class="popup-link" href="/portfolio/bazarchik.jpg" title="Bazarchik.uz">
+                            <img  src="/img/loader.svg" data-src="/portfolio/bazarchik.jpg" alt="Bazarchik.uz">
+                            <div class="portfolio-caption ">
+                                <h3 class="portfolio-title">Bazarchik.uz</h3>
+                                <div class="portfolio-descr">
+                                    Bazarchik.uz - grocery marketplace
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                     <div class="portfolio-item mobile">
                         <a class="popup-link" href="/portfolio/aviatime.jpg" title="AviaTime - air ticket app">
                             <img  src="/img/loader.svg" data-src="/portfolio/aviatime.jpg" alt="">
@@ -185,6 +273,61 @@ js: "/js/portfolio.js"
                                 <h3 class="portfolio-title">USSD Bonus</h3>
                                 <div class="portfolio-descr">
                                     USSD Bonus - informer mobile operators (iOS)
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolio-item mobile">
+                        <a class="popup-link" href="/portfolio/tezpay.jpg" title="TezPay">
+                            <img  src="/img/loader.svg" data-src="/portfolio/tezpay.jpg" alt="">
+                            <div class="portfolio-caption ">
+                                <h3 class="portfolio-title">TezPay</h3>
+                                <div class="portfolio-descr">
+                                    TezPay - payment system
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolio-item web">
+                        <a class="popup-link" href="/portfolio/prosuit.jpg" title="Prosuit">
+                            <img  src="/img/loader.svg" data-src="/portfolio/prosuit.jpg" alt="">
+                            <div class="portfolio-caption ">
+                                <h3 class="portfolio-title">Prosuit</h3>
+                                <div class="portfolio-descr">
+                                    Prosuit - personnel testing portal of the of Uzbekistan
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolio-item web">
+                        <a class="popup-link" href="/portfolio/khivaeducation.jpg" title="KhivaEducation">
+                            <img  src="/img/loader.svg" data-src="/portfolio/khivaeducation.jpg" alt="">
+                            <div class="portfolio-caption ">
+                                <h3 class="portfolio-title">KhivaEducation</h3>
+                                <div class="portfolio-descr">
+                                    KhivaEducation - CRM system for educational centers
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolio-item wide web">
+                        <a class="popup-link" href="/portfolio/crm-asaxiy.jpg" title="Asaxiy CRM">
+                            <img  src="/img/loader.svg" data-src="/portfolio/crm-asaxiy.jpg" alt="">
+                            <div class="portfolio-caption ">
+                                <h3 class="portfolio-title">Asaxiy CRM</h3>
+                                <div class="portfolio-descr">
+                                    Asaxiy CRM - fulfillment for online shopping
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolio-item web">
+                        <a class="popup-link" href="/portfolio/uzsci.png" title="SLib">
+                            <img  src="/img/loader.svg" data-src="/portfolio/uzsci.png" alt="">
+                            <div class="portfolio-caption ">
+                                <h3 class="portfolio-title">SLib</h3>
+                                <div class="portfolio-descr">
+                                    SLib - scientific library of Uzbekistan
                                 </div>
                             </div>
                         </a>
