--- a/employment.html
+++ b/employment.html
@@ -16,7 +16,7 @@ use-site-title: true
                     <div class="item">
                         <div class="col-sm-6">
                             <div class="box">
-                                October, 2019 - Present
+                                October, 2019 - October, 2020
                                 <div class="box-sub-title">
                                     "Asaxiy" LLC
                                 </div>
@@ -25,7 +25,7 @@ use-site-title: true
                         </div>
                         <div class="col-sm-6">
                             <div class="box_dec">
-                                <h3>Technical director</h3>
+                                <h3>Technical director (CTO)</h3>
                                 <ul class="description">
                                     <li>Manage technical side of business of company</li>
                                     <li>Manage online store <a href="https://asaxiy.uz" target="_blank">asaxiy.uz</a></li>
