add new article, change job position

--- a/employment.html
+++ b/employment.html
@@ -16,6 +16,26 @@ use-site-title: true
                     <div class="item">
                         <div class="col-sm-6">
                             <div class="box">
+                                February, 2021 - Present
+                                <div class="box-sub-title">
+                                    "GapIntelligence" LLC
+                                </div>
+                                (San Diego, California, U.S.A)
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="box_dec">
+                                <h3>Ruby developer</h3>
+                                <ul class="description">
+                                    <li>Tech support on Ruby on Rails projects</li>
+                                    <li>Making new features</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="col-sm-6">
+                            <div class="box">
                                 October, 2019 - October, 2020
                                 <div class="box-sub-title">
                                     "Asaxiy" LLC
